Domain parser + tests
- finalized domain parser with interface and swarm implementation
- small position changes
- tests (99.6 coverage only because of the damned https://github.com/jacoco/jacoco/issues/1211)
- javadoc